--- a/junit5/pom.xml
+++ b/junit5/pom.xml
@@ -14,6 +14,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <maven.surefile.plugin.version>2.22.2</maven.surefile.plugin.version>
     </properties>
 
     <dependencies>
@@ -30,7 +31,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${maven.surefile.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
