Add maven.compiler.source and target version for maven compiler plugin to pom.xml

--- a/junit5/pom.xml
+++ b/junit5/pom.xml
@@ -12,7 +12,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
         <maven.surefile.plugin.version>2.22.2</maven.surefile.plugin.version>
     </properties>
