--- a/tdd-practice/pom.xml
+++ b/tdd-practice/pom.xml
@@ -12,6 +12,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>tdd-practice</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
