--- a/junit5-jupiter-starter-maven-practice/pom.xml
+++ b/junit5-jupiter-starter-maven-practice/pom.xml
@@ -4,9 +4,9 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sejin</groupId>
-    <artifactId>junit5</artifactId>
+    <artifactId>junit5-jupiter-starter-maven-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>junit5</name>
+    <name>junit5-jupiter-starter-maven-practice</name>
     <url>http://maven.apache.org</url>
 
     <properties>
