--- a/junit5-jupiter-starter-maven-practice/pom.xml
+++ b/junit5-jupiter-starter-maven-practice/pom.xml
@@ -25,6 +25,13 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
