Add demo spring project

--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,6 @@
         <module>junit5-jupiter-starter-maven-practice</module>
         <module>tdd-practice</module>
         <module>java-language</module>
+        <module>spring/spring-project</module>
     </modules>
 </project>
